third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/catch_all_multiple_fields.stderr
error: Variant with `catch_all` must be a tuple with exactly 1 field matching the repr type
 --> tests/try_build/compile_fail/catch_all_multiple_fields.rs:5:16
  |
5 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
